# project_simulation

./: CMakeLists.txt  README.md  conseil_prof.txt
buildrelease/: CMakeCache.txt  CTestTestfile.cmake  Makefile  SimulatorProject  cmake_install.cmake  test.vtk  test_Equation  test_Problem  test_vtk.py  u_ref_paraview.vtk  ukp1.data  ukp1_paraview.vtk
buildrelease/Testing/Temporary/: CTestCostData.txt
include/: Equation.h  GaussSeidel.h  IMesh.h  Jacobi.h  Problem.h  Timer.h  UniformMesh.h  Variable.h
src/: Equation.cpp  GaussSeidel.cpp  Jacobi.cpp  Problem.cpp  UniformMesh.cpp  Variable.cpp  main.cpp
tests/: test_Equation.cpp  test_Problem.cpp
